# src/auth_service/claims_repository/models/claims.py
@@ -42,9 +42,11 @@ __all__ = [
     "ClaimUpdate",
     "ClaimValidity",
     "Condition",
+    "Grant",
     "Identity",
     "MatchClaim",
     "MatchType",
+    "UploadGrant",
     "VisaType",
 ]
 
@@ -66,6 +68,7 @@ class VisaType(StrEnum):
     LINKED_IDENTITIES = "LinkedIdentities"
     # Custom Visa Types
     GHGA_ROLE = "https://www.ghga.de/GA4GH/VisaTypes/Role/v1.0"
+    GHGA_UPLOAD = "https://www.ghga.de/GA4GH/VisaTypes/Upload/v1.0"
 
 
 class AuthorityLevel(StrEnum):
@@ -222,6 +225,34 @@ class Grant(BaseDto):
     )
     dataset_id: Accession = Field(
         default=..., description="ID of the dataset this grant is for"
+    )
+
+    created: UTCDatetime = Field(
+        default=..., description="Date of creation of this grant"
+    )
+    valid_from: UTCDatetime = Field(default=..., description="Start date of validity")
+    valid_until: UTCDatetime = Field(default=..., description="End date of validity")
+
+    user_name: str = Field(default=..., description="Full name of the user")
+    user_email: EmailStr = Field(
+        default=...,
+        description="The email address of the user",
+    )
+    user_title: str | None = Field(
+        default=None, description="Academic title of the user"
+    )
+
+
+class UploadGrant(BaseDto):
+    """An upload access grant based on a corresponding claim."""
+
+    id: UUID4 = Field(..., description="Internal grant ID (same as claim ID)")
+    user_id: UUID4 = Field(default=..., description="Internal user ID")
+    iva_id: UUID4 | None = Field(
+        default=None, description="ID of an IVA associated with this grant"
+    )
+    box_id: UUID4 = Field(
+        default=..., description="ID of the upload box this grant is for"
     )
 
     created: UTCDatetime = Field(
